{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 395,
  "lineage": "98b1c831-28f2-30ec-18a4-a9ce84dba189",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0a5e7c9183d1cea27",
            "arn": "arn:aws:ec2:us-east-1:716107554244:instance/i-0f1e47a7f464c6c5a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "ecs-agent",
            "id": "i-0f1e47a7f464c6c5a",
            "instance_state": "running",
            "instance_tags": {
              "Name": "CacheContainer"
            },
            "instance_type": "t2.micro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "network_interface_id": "eni-0165be6bb56cfa536",
            "private_dns": "ip-172-31-10-6.ec2.internal",
            "private_ip": "172.31.10.6",
            "public_dns": "ec2-18-232-145-170.compute-1.amazonaws.com",
            "public_ip": "18.232.145.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0232b7f3ad11961dc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow access to using cache"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000d7a22edcf7f359",
            "tags": {
              "Name": "CacheContainer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a64097b3716bacc"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-01accb753b8e1c274",
            "arn": "arn:aws:ec2:us-east-1:716107554244:instance/i-0c212472bdeee36fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "aws-elasticbeanstalk-ec2-role",
            "id": "i-0c212472bdeee36fd",
            "instance_state": "running",
            "instance_tags": {
              "Name": "GerritApp-env"
            },
            "instance_type": "t2.micro",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-03480361a4117e2bc",
            "private_dns": "ip-172-31-0-80.ec2.internal",
            "private_ip": "172.31.0.80",
            "public_dns": "ec2-3-209-204-212.compute-1.amazonaws.com",
            "public_ip": "3.209.204.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09548f73a18c66a6e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow public access to application",
              "awseb-e-qfxy9pg4nf-stack-AWSEBSecurityGroup-P8ZWUZW44YBE"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000d7a22edcf7f359",
            "tags": {
              "Name": "GerritApp-env",
              "elasticbeanstalk:environment-id": "e-qfxy9pg4nf",
              "elasticbeanstalk:environment-name": "GerritApp-env"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035e9ee764e7515d5",
              "sg-06f6b78af065db8a3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716107554244:subnet/subnet-000d7a22edcf7f359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-000d7a22edcf7f359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716107554244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0846480410fea0802"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716107554244:vpc/vpc-0846480410fea0802",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0cb04044064fcfe06",
            "default_route_table_id": "rtb-00844a84db74a1add",
            "default_security_group_id": "sg-0bbb91f834ea53899",
            "dhcp_options_id": "dopt-0f6a6ad9d25c08acc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0846480410fea0802",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00844a84db74a1add",
            "owner_id": "716107554244"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gerrit-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008ab3da197c57b0f",
            "association_id": "eipassoc-06a74af6a13153989",
            "domain": "vpc",
            "id": "eipalloc-008ab3da197c57b0f",
            "instance": "i-0c212472bdeee36fd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03480361a4117e2bc",
            "private_dns": "ip-172-31-0-80.ec2.internal",
            "private_ip": "172.31.0.80",
            "public_dns": "ec2-3-209-204-212.compute-1.amazonaws.com",
            "public_ip": "3.209.204.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP for GerritApp-env"
            },
            "tags_all": {
              "Name": "EIP for GerritApp-env"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_subnet.az1",
            "aws_default_vpc.default",
            "aws_elastic_beanstalk_application.GerritApp",
            "aws_elastic_beanstalk_environment.GerritApp-env",
            "aws_security_group.app",
            "data.aws_instance.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716107554244:security-group/sg-035e9ee764e7515d5",
            "description": "Allow public to access to application with port 8080,29418",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035e9ee764e7515d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 29418,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 29418
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow public access to application",
            "name_prefix": "",
            "owner_id": "716107554244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppSG"
            },
            "tags_all": {
              "Name": "AppSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0846480410fea0802"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:716107554244:security-group/sg-01a64097b3716bacc",
            "description": "Allow access to using cache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a64097b3716bacc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "Allow access to using cache",
            "name_prefix": "",
            "owner_id": "716107554244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CacheSG"
            },
            "tags_all": {
              "Name": "CacheSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0846480410fea0802"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}